<resources>
    <string name="app_name">Minsu</string>
    <string name="title_explore">探索</string>
    <string name="title_wish">心愿单</string>
    <string name="title_story">故事</string>
    <string name="title_inbox">收件箱</string>
    <string name="title_login">登录</string>
    <string name="txt_left">国内</string>
    <string name="txt_right">国外/港澳台</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
