<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_wish"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_wish" />

    <item
        android:id="@+id/navigation_story"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_story" />
    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_inbox" />
    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_login" />

</menu>
