<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_explore">

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.minsu.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_wish"
        android:name="com.minsu.ui.wish.WishFragment"
        android:label="@string/title_wish"
        tools:layout="@layout/fragment_wish" />

    <fragment
        android:id="@+id/navigation_story"
        android:name="com.minsu.ui.story.StoryFragment"
        android:label="@string/title_story"
        tools:layout="@layout/fragment_story" />
    <fragment
        android:id="@+id/navigation_inbox"
        android:name="com.minsu.ui.inbox.InboxFragment"
        android:label="@string/title_inbox"
        tools:layout="@layout/fragment_inbox" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.minsu.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />
</navigation>
